--- a/DES01.html
+++ b/DES01.html
@@ -29,6 +29,8 @@
     <h2 id="Falando">Falando sobre Tags <font size="4"><small><a href="#inicio">(voltar)</a></small></font></h2>
 
         <p> <font size="4">As tags HTMl são elementos usados para marcar e formatar os conteudos, textual ou visualem documentos HTML.cada tag tem um nome e uma sintaxe que determina como ela deve ser aberta e fechada. como é o caso da tag &lti&gt, que tem a função de altera o seu texto para Italico e a tag &ltstrong&gt, com a função de alterar o texto para negrito, mas ainda existe as tags que não necessitam da tag de fechamento. </font></p>
+
+        <h2><h2 id="Estrutura">Atributos das Tags<font size="4"><small><a href="#inicio">(voltar)</a></small></font></h2></h2></h2>
 </body>
 </html>
 <body>
