--- a/DES01.html
+++ b/DES01.html
@@ -22,15 +22,21 @@
         
 
     </ul>
-    <h2 id="Estrutura">Estrutura Básica do HTML <font size="4"><small><a href="#inicio">(voltar)</a></small></font></h2></h2>
+    <h2 id="Estrutura">Estrutura Básica do HTML <font size="4"><small><a href="#inicio"> (voltar)</a></small></font></h2></h2>
 
         <p> <font size="4">O documento <strong>HTML</strong> sempre inicia com uma estrutura básica padrão. Onde essa estrutura será composta das tags &lt!DOCTYPE&gt, &ltHEAD&gt e &ltBODY&gt A estrutura principal deve iniciar com a etiqueta &ltHTML&gt e terminar com a etiqueta &lt/HTML&gt. O cabeçalho, delimitado pelas etiquetas &ltHEAD&gt e &lt/HEAD&gt, destina-se a conter informações sobre o documento - por exemplo, o título do documento (que é construído com o elemento <strong>TITLE</strong> e aparece no título da janela do navegador).</font></p>
 
-    <h2 id="Falando">Falando sobre Tags <font size="4"><small><a href="#inicio">(voltar)</a></small></font></h2>
+    <h2 id="falando">Falando sobre Tags <font size="4"><small><a href="#inicio"> (voltar)</a></small></font></h2>
 
         <p> <font size="4">As tags HTMl são elementos usados para marcar e formatar os conteudos, textual ou visualem documentos HTML.cada tag tem um nome e uma sintaxe que determina como ela deve ser aberta e fechada. como é o caso da tag &lti&gt, que tem a função de altera o seu texto para Italico e a tag &ltstrong&gt, com a função de alterar o texto para negrito, mas ainda existe as tags que não necessitam da tag de fechamento. </font></p>
 
-        <h2><h2 id="Estrutura">Atributos das Tags<font size="4"><small><a href="#inicio">(voltar)</a></small></font></h2></h2></h2>
+        <h2><h2 id="Atributos">Atributos das Tags<font size="4"><small><a href="#inicio"> (voltar)</a></small></font></h2></h2></h2>
+        <p><font size="4"> Atributos <strong>HTML</strong> são palavras especiais usadas dentro da tag de abertura para controlar o comportamento do elemento. Os atributos são um modificador de um tipo de elemento HTML. Com eles podemos identificar melhor um elemento, informar qual arquivo aquela tag deve utilizar, indicar o tipo de um campo de texto, entre outros. Sendo assim para adicionar um atributo a uma tag HTML é usando o formato <strong> "nome_do_atributo"="valor_do_atributo".</strong> </font></p>
+
+        <h2><h2 id="textos">Textos<font size="4"><small><a href="#inicio"> (voltar)</a></small></font></h2></h2></h2>
+
+        <p><font size="4">Para a realização de textos em HTML é necessário a combinação de algumas tags, começando pela tag h, que é responsável por representar as seções de conteúdo, em diferentes níveis em uma página. Seguindo a ordem de 1 a 6, onde a tag h1 tem o maior peso, geralmente utilizada para receber o título do texto, e as demais h2, h3, h4, h5 e h6, são sub-seções da primeira e utilizadas em subtítulos ou fracionamentos de conteúdo. Seguido da tag &ltp&gt que é responsável por inserir um parágrafo, e com a combinação de outras tags como é o caso da tag &ltStrong&gt que deixa o texto em negrito, em seguida a tag &ltI&gt que altera seu texto para itálico. Com a tag &ltU&gt é possível sublinhar o seu texto, em seguida a tag &ltMark&gt que é responsável por marcar o texto, já com a tag &ltsup&gt você consegue colocar um subscrito em determinado texto. Já com a tag &ltBlockquote&gt o operador consegue colocar uma citação em seu texto de algum altor ou até mesmo uma observação sobre um determinado assunto do seu texto. Sendo assim existem diversas formas de realizar a configuração de um texto, cabendo ao operador realizar a sua criatividade para deixar a página de forma mais atraente na hora da leitura.</font></p>
+
 </body>
 </html>
 <body>
