--- a/DES01.html
+++ b/DES01.html
@@ -6,11 +6,11 @@
     <title>Tags em HTML</title>
 </head>
 <body>
-    <h1> Introdução ao HTML</h1>
+    <h1 id="inicio"> Introdução ao HTML</h1>
     <hr>
-    <p><font size="4">Nesse artigo será repassado um pouco do conceito sobre HTML, onde será abordado alguns itens incluido as principais tags utilizadas em HTML. </font></p>
+    <p><blockquote><font size="5">Neste artigo será repassado um pouco do conceito sobre HTML, onde será abordado alguns itens incluido as principais tags utilizadas em HTML.</font></blockquote></p>
     
-    <h2 id="inicio"><u>Índice:</u></h2>
+    <h2><u>Índice:</u></h2>
     <ul>
         <li> <a href="#Estrutura">Estrutura Básica do HTML</a></li>
         <li> <a href="#falando">Falando sobre Tags</a></li>
@@ -28,14 +28,31 @@
 
     <h2 id="falando">Falando sobre Tags <font size="4"><small><a href="#inicio"> (voltar)</a></small></font></h2>
 
-        <p> <font size="4">As tags HTMl são elementos usados para marcar e formatar os conteudos, textual ou visualem documentos HTML.cada tag tem um nome e uma sintaxe que determina como ela deve ser aberta e fechada. como é o caso da tag &lti&gt, que tem a função de altera o seu texto para Italico e a tag &ltstrong&gt, com a função de alterar o texto para negrito, mas ainda existe as tags que não necessitam da tag de fechamento. </font></p>
+        <p> <font size="4">As tags HTML são elementos usados para marcar e formatar os conteúdos: textual ou visual em documentos HTML. Cada tag HTML tem um nome e uma sintaxe que determina como ela deve ser aberta e fechada. Onde são formadas por uma estrutura própria, iniciam com o sinal “menor que”, em seguida vem o nome daquele elemento e por fim, o sinal “maior que”.</font></p>
+
 
         <h2><h2 id="Atributos">Atributos das Tags<font size="4"><small><a href="#inicio"> (voltar)</a></small></font></h2></h2></h2>
+        
         <p><font size="4"> Atributos <strong>HTML</strong> são palavras especiais usadas dentro da tag de abertura para controlar o comportamento do elemento. Os atributos são um modificador de um tipo de elemento HTML. Com eles podemos identificar melhor um elemento, informar qual arquivo aquela tag deve utilizar, indicar o tipo de um campo de texto, entre outros. Sendo assim para adicionar um atributo a uma tag HTML é usando o formato <strong> "nome_do_atributo"="valor_do_atributo".</strong> </font></p>
 
         <h2><h2 id="textos">Textos<font size="4"><small><a href="#inicio"> (voltar)</a></small></font></h2></h2></h2>
 
-        <p><font size="4">Para a realização de textos em HTML é necessário a combinação de algumas tags, começando pela tag h, que é responsável por representar as seções de conteúdo, em diferentes níveis em uma página. Seguindo a ordem de 1 a 6, onde a tag h1 tem o maior peso, geralmente utilizada para receber o título do texto, e as demais h2, h3, h4, h5 e h6, são sub-seções da primeira e utilizadas em subtítulos ou fracionamentos de conteúdo. Seguido da tag &ltp&gt que é responsável por inserir um parágrafo, e com a combinação de outras tags como é o caso da tag &ltStrong&gt que deixa o texto em negrito, em seguida a tag &ltI&gt que altera seu texto para itálico. Com a tag &ltU&gt é possível sublinhar o seu texto, em seguida a tag &ltMark&gt que é responsável por marcar o texto, já com a tag &ltsup&gt você consegue colocar um subscrito em determinado texto. Já com a tag &ltBlockquote&gt o operador consegue colocar uma citação em seu texto de algum altor ou até mesmo uma observação sobre um determinado assunto do seu texto. Sendo assim existem diversas formas de realizar a configuração de um texto, cabendo ao operador realizar a sua criatividade para deixar a página de forma mais atraente na hora da leitura.</font></p>
+        <p><font size="4">Para a realização de textos em HTML é necessário a combinação de algumas tags, começando pela tag <strong>h</strong>, que é responsável por representar as seções de conteúdo, em diferentes níveis em uma página. Seguindo a ordem de 1 a 6, onde a tag h1 tem o maior peso, geralmente utilizada para receber o título do texto, e as demais h2, h3, h4, h5 e h6, são sub-seções da primeira e utilizadas em subtítulos ou fracionamentos de conteúdo. Seguido da tag <strong>&ltp&gt</strong> que é responsável por inserir um parágrafo, e com a combinação de outras tags como é o caso da tag <strong>&ltStrong&gt</strong> que deixa o texto em negrito, em seguida a tag <strong>&ltI&gt</strong>que altera seu texto para itálico. Com a tag <strong>&ltU&gt</strong> é possível sublinhar o seu texto, em seguida a tag <strong>&ltMark&gt</strong> que é responsável por marcar o texto, já com a tag <strong>&ltsup&gt</strong> você consegue colocar um subscrito em determinado texto. Já com a tag <strong>&ltBlockquote&gt</strong> o operador consegue colocar uma citação em seu texto de algum altor ou até mesmo uma observação sobre um determinado assunto do seu texto. Sendo assim existem diversas formas de realizar a configuração de um texto, cabendo ao operador realizar a sua criatividade para deixar a página de forma mais atraente na hora da leitura.</font></p>
+
+        <h2><h2 id="Listas">Listas Ordenadas e Não Ordenadas<font size="4"><small><a href="#inicio"> (voltar)</a></small></font></h2></h2></h2>
+
+        <p><font size="4"> A diferença entre a listas ordenadas e a não ordenadas está na maneira com que os itens de cada lista são apresentados. Pois a lista ordenada enumera os elementos descritos no texto e a lista não-ordenada coloca marcadores antes de cada elemento do texto. Essas listas são representadas pelas tags <strong>&ltol&gt</strong> (ou elemento HTML de lista ordenada) ou pela tag <strong>&ltul&gt</strong> (ou elemento HTML de lista não ordenada) e para inserir a lista será necessário inserir o incremento, do <strong>&ltli&gt.</strong></font></p>
+
+        <h2><h2 id="Links">Links<font size="4"><small><a href="#inicio"> (voltar)</a></small></font></h2></h2></h2>
+
+        <p> <font size="4">O link em HTML tem a função de vincular um documento a qualquer outro documento ou recurso, seja na própria página ou até mesmo direcionar para outras páginas.</p> 
+        <p>No HTML, os links são definidos pela tag <strong>&lta&gt</strong>. Dentro dessa tag incluímos o atributo href (Hypertext Reference), que é o endereço de destino do link. Dentro do conteúdo da tag <strong>&lta&gt</strong>, incluímos então o texto ou elemento que servirá como redirecionador, ou seja, que ao ser clicado, executará a função de redirecionar para o endereço dentro do atributo href.</font></p>
+
+        <h3>Links de videos para estudo</h3>
+            <p><a href="https://www.youtube.com/watch?v=R03meRUNRwQ"> Como Inserir links</a></p>
+            <p><a href="https://www.youtube.com/watch?v=EnMCpxdCyw4"> Listas ordenadas e não ordenadas</a></p>
+            <p><a href="https://www.youtube.com/watch?v=-u0DyDbH1Ek"> Alguns atributos</a></p>
+            <p><a href="https://www.w3schools.com/html/default.asp"> Tutorial HTML</a></p>
 
 </body>
 </html>
