--- a/DES01.html
+++ b/DES01.html
@@ -48,7 +48,7 @@
         <p> <font size="4">O link em HTML tem a função de vincular um documento a qualquer outro documento ou recurso, seja na própria página ou até mesmo direcionar para outras páginas.</p> 
         <p>No HTML, os links são definidos pela tag <strong>&lta&gt</strong>. Dentro dessa tag incluímos o atributo href (Hypertext Reference), que é o endereço de destino do link. Dentro do conteúdo da tag <strong>&lta&gt</strong>, incluímos então o texto ou elemento que servirá como redirecionador, ou seja, que ao ser clicado, executará a função de redirecionar para o endereço dentro do atributo href.</font></p>
 
-        <h3>Links de videos para estudo</h3>
+        <h2><strong>Links de videos para estudo:</strong></h2>
             <p><a href="https://www.youtube.com/watch?v=R03meRUNRwQ"> Como Inserir links</a></p>
             <p><a href="https://www.youtube.com/watch?v=EnMCpxdCyw4"> Listas ordenadas e não ordenadas</a></p>
             <p><a href="https://www.youtube.com/watch?v=-u0DyDbH1Ek"> Alguns atributos</a></p>
